# ensab

./: .gitignore  Cargo.toml  README.md
.helix/: languages.toml
api/: Cargo.toml
api/contracts/: Cargo.toml
api/contracts/src/: lib.rs
api/db/: Cargo.toml
api/db/migrations/: 0001_member.sql
api/db/src/: lib.rs  member.rs  users.rs
api/ensab_api/: Cargo.toml
api/ensab_api/.sqlx/: query-25aab43c34a7b9f84a88babfda81b0247c36d624419bd0ffd6a0da91aecd5a0a.json  query-562f988070da2423bbfc5749b54ebb4b94cffb18fcf71b21a8fe7f0b83265cea.json  query-5e0e50e305583ee8fe0c2c0858b27aa66467ae047b53c2e9caae3b804186a374.json  query-7609165d94c8f1bea9d535b9b7ad727fd06592973d7f83017292d41acb203be6.json  query-77cddd41815a5869a6f29ed81453a8672eb8e21622eaebe1d9b99312d3e40383.json  query-88714d45b8b20aeaff4bd7d8d35c80f75674cdd22643e0aed244047b9d37a6da.json  query-8ffa39fc73cd49006327c94081a54dd2555748c7ff5de37fdc00a8c05023714e.json  query-cf5c97e0c514e004bad2157ed15a0f18170370b8e9e61f7e71b2a75b24455de4.json
api/ensab_api/src/: member.rs  results.rs
contracts/: Cargo.toml
contracts/src/: lib.rs
db/: Cargo.toml
db/src/: member.rs
ensab/: .env  Cargo.toml
ensab/src/: app.rs  db.rs  family_tree.rs  lib.rs  main.rs
ensab/src/db/: member.rs  users.rs
ensab/src/family_tree/: member.rs  member_actions.rs
ensab/src/family_tree/tree/: member_action.rs
ensab_api/: .env  Cargo.toml  docker-compose.yml  pom.xml
ensab_api/src/: main.rs  member.rs
ensab_api/src/main/java/com/ensab/ensab_api/: EnsabApiApplication.java
ensab_api/src/main/resources/: application.properties
ensab_api/src/test/java/com/ensab/ensab_api/: EnsabApiApplicationTests.java
ensab_ui/: README.md  angular.json  bun.lockb  package-lock.json  package.json
ensab_ui/src/: index.html
ensab_ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  member.ts  shared.ts
ensab_ui/src/app/ftree/: ftree.component.html  ftree.component.ts  ftreeSignals.ts
ensab_ui/src/app/ftree-form/: ftree-form.component.ts
ensab_ui/src/app/ftree/ftree-form/: ftree-form.component.html  ftree-form.component.ts
ensab_ui/src/app/ftree/member-node/: actionsGroup.ts  member-node.component.html  member-node.component.ts  member.ts
ensab_ui/src/app/ftree/member-node/actions/: actions.component.html  actions.component.ts
ensab_ui/src/app/ftree/member-node/actions-buttons-form/: actions-buttons-form.component.html  actions-buttons-form.component.ts
ensab_ui/src/app/home/: home.component.ts
ensab_ui/src/app/member-node/: member-node.component.html  member-node.component.ts
shared/: Cargo.toml
shared/migrations/: 0001_member.sql
shared/src/: lib.rs  member.rs  users.rs
src/: app.rs  db.rs  family_tree.rs  lib.rs
src/db/: member.rs  users.rs
src/family_tree/: member.rs  member_actions.rs  name_form.rs  tree.rs
src/family_tree/tree/: member_action.rs
(+12 files in other folders)
