[package]
name = "ensab_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","postgres","uuid","chrono" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde","v4"] }
anyhow = "1.0.81"
dotenvy = "0.15.7"
chrono = { version = "0.4.37", features = ["serde"] }
async-recursion = "1.1.0"
