[package]
name = "ensab_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde","v4"] }
anyhow = "1.0.81"
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = ["cors"] }
db= {path ="../db"}
