[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","postgres","uuid","chrono" ] }
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
