[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
anyhow = {workspace = true}
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls","postgres","uuid","chrono" ] }
chrono = { version = "0.4.37", features = ["serde"] }
contracts = {path = "../contracts"}
